--- a/src/style/style.css
+++ b/src/style/style.css
@@ -6,5 +6,24 @@ div{
   border: 2px solid black;
   border-radius: 1rem;
   padding: 1rem;
-  max-width: 300px;
+  max-width: 350px;
+  text-align: center;
+}
+
+.quantity{
+  display: inline;
+}
+
+.quantity button {
+  background-color: #f77753;
+  border: 0;
+  border-radius: 3px;
+  color: white;
+  padding: 5px 10px;
+  margin: 0 1rem;
+}
+
+.quantity input {
+  width: 50px;
+  text-align: center;
 }
