--- a/src/style/style.css
+++ b/src/style/style.css
@@ -27,3 +27,25 @@ div{
   width: 50px;
   text-align: center;
 }
+nav a{
+  color: #000000;
+  text-decoration: none;
+  border: 1px solid #000000;
+  border-radius: 0.5rem;
+  padding: 0.5rem 2rem;
+}
+
+nav ul{
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  padding: 0;
+}
+nav ul li{
+  list-style-type: none;
+}
+nav ul li .active{
+  font-weight: bold;
+  color: #f77753;
+  background-color: #efefef;
+}
