--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,13 +1,13 @@
-div{
-  padding: 0.5rem 0;
-}
-
 .panel{
+  display: flex;
+  gap: 0.5rem;
+  flex-direction: column;
   border: 2px solid black;
   border-radius: 1rem;
-  padding: 1rem;
-  max-width: 350px;
   text-align: center;
+  padding-bottom: 0.7rem;
+  max-width: 370px;
+  margin-bottom: 1rem;
 }
 
 .quantity{
@@ -48,4 +48,35 @@ nav ul li .active{
   font-weight: bold;
   color: #f77753;
   background-color: #efefef;
+}
+.helpContainer{
+  position: relative;
+  display: inline-block;
+}
+.helpButton {
+  width: 32px;
+  cursor: pointer;
+  top: 10px;
+  position: relative;
+  left: -10px;
+}
+.helpBox {
+  background-color: rgb(0,0,0,0.6);
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.helpText{
+  background-color: #ffffff;
+  padding: 2rem 2rem;
+  border: 2px solid #000000;
+  border-radius: 1rem;
+}
+.checkboxElement{
+  padding: 0 0 1rem 0rem;
 }
