--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,3 +1,67 @@
+html, body{
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+#root{
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+.container{
+  padding: 1rem 1.5rem;
+}
+
+aside {
+  align-content: flex-start;
+  align-items: flex-start;
+  border-left: 1px solid black;
+  display: flex;
+  flex-grow: 1;
+  flex-wrap: wrap;
+  gap: 1rem;
+  justify-content: flex-start;
+  padding: 1rem 1.5rem;
+}
+.resumen {
+  background-color: white;
+  box-shadow: 0px 2px 6px 0px;
+  padding: 0.5rem;
+}
+.resumen.selected{
+  background-color: lightblue;
+}
+.resumen div{
+  font-family: monospace;
+  font-size: 0.6rem;
+  border-bottom: 1px dotted #dddddd;
+  padding: 0.4rem 0;
+}
+.resumen div span {
+  width: 50px;
+  display: inline-block;
+}
+.resumen:hover{
+  cursor: pointer;
+}
+
+section{
+  flex-grow: 1;
+  padding: 1rem 1.5rem;
+  min-width: 25rem;
+}
+.flex{
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  height: 100%;
+}
+
+main{
+  background-color: #e5edff;
+}
+
 .panel{
   display: flex;
   gap: 0.5rem;
@@ -27,19 +91,27 @@
   width: 50px;
   text-align: center;
 }
+nav{
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+  background-color: #020070;
+  box-shadow: 0px 4px 9px 0px;
+}
 nav a{
   color: #000000;
   text-decoration: none;
   border: 1px solid #000000;
   border-radius: 0.5rem;
   padding: 0.5rem 2rem;
+  background-color: white;
 }
 
 nav ul{
   display: flex;
   flex-direction: row;
   gap: 1rem;
-  padding: 0;
+  padding: 0.5rem 0;
 }
 nav ul li{
   list-style-type: none;
