--- a/src/style/style.css
+++ b/src/style/style.css
@@ -174,3 +174,10 @@ nav ul li .active{
 .filters .selected{
   background-color: papayawhip;
 }
+.newBudget{
+  font-size: 2rem;
+  padding: 3rem;
+  background-color: white;
+  box-shadow: 0px 2px 6px 0px;
+  cursor: pointer;
+}
